Updating the project files and overhauling InfuseEffect.java