@@ -1,30 +1,36 @@
 package com.catadmirer.infuseSMP.commands;
 
-import com.catadmirer.infuseSMP.EffectConstants;
 import com.catadmirer.infuseSMP.Infuse;
 import com.catadmirer.infuseSMP.Message;
+import com.catadmirer.infuseSMP.MessageConfig;
 import com.catadmirer.infuseSMP.Message.MessageType;
+import com.catadmirer.infuseSMP.effects.InfuseEffect;
 import com.catadmirer.infuseSMP.inventories.EffectChooser;
 import com.catadmirer.infuseSMP.inventories.RecipeListGUI;
 import com.catadmirer.infuseSMP.managers.CooldownManager;
-import com.catadmirer.infuseSMP.effects.InfuseEffect;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
+
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
-import org.bukkit.plugin.java.JavaPlugin;
+import org.jspecify.annotations.NonNull;
 
 public class InfuseCommand implements CommandExecutor, TabCompleter {
-    private final Infuse plugin = JavaPlugin.getPlugin(Infuse.class);
+    private final Infuse plugin;
+    
+    public InfuseCommand(Infuse plugin) {
+        this.plugin = plugin;
+    }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(@NonNull CommandSender sender, @NonNull Command command, @NonNull String label, String @NonNull [] args) {
         if (!(sender instanceof Player player)) {
             return true;
         }
@@ -34,6 +40,10 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
+        Player target;
+        String effectKey;
+        InfuseEffect effect;
+        Message msg;
         switch (args[0].toLowerCase()) {
             case "gui":
                 if (!player.isOp()) {
@@ -41,7 +51,7 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                     return true;
                 }
 
-                player.openInventory(new EffectChooser().getInventory());
+                player.openInventory(new EffectChooser(plugin).getInventory());
                 break;
 
             case "reload":
@@ -51,7 +61,7 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                 }
 
                 plugin.getMainConfig().load();
-                plugin.getMessageConfig().load();
+                MessageConfig.load(plugin);
                 plugin.getRecipeManager().reload();
                 player.sendMessage("Infuse configs reloaded");
                 break;
@@ -69,14 +79,14 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                     return true;
                 }
 
-                Player target = Bukkit.getPlayer(args[1]);
+                target = Bukkit.getPlayer(args[1]);
                 if (target == null || !target.isOnline()) {
                     player.sendMessage(new Message(MessageType.ERROR_TARGET_NOT_FOUND).toComponent());
                     return true;
                 }
 
-                String effectKey = args[2].toLowerCase();
-                InfuseEffect effect = InfuseEffect.fromEffectKey(effectKey);
+                effectKey = args[2].toLowerCase();
+                effect = InfuseEffect.fromString(effectKey);
                 if (effect == null) {
                     player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
                     return true;
@@ -84,8 +94,8 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
 
                 target.getInventory().addItem(effect.createItem());
 
-                Message msg = new Message(MessageType.INFUSE_GIVEEFFECT_SUCCESS);
-                msg.applyPlaceholder("effect_color", "<#" + Integer.toHexString(EffectConstants.potionColor(effect.getId()).getRGB() & 0xffffff) + ">");
+                msg = new Message(MessageType.INFUSE_GIVEEFFECT_SUCCESS);
+                msg.applyPlaceholder("effect_color", "<#" + Integer.toHexString(effect.getPotionColor().getRGB() & 0xffffff) + ">");
                 msg.applyPlaceholder("effect_name", effect.getName());
                 target.sendMessage(msg.toComponent());
                 break;
@@ -109,7 +119,7 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                 
                 // Getting the effect key and verifying its integrity.
                 effectKey = args[2].toLowerCase();
-                effect = InfuseEffect.fromEffectKey(effectKey);
+                effect = InfuseEffect.fromString(effectKey);
                 if (effect == null) {
                     player.sendMessage(new Message(MessageType.INFUSE_INVALID_PARAM).toComponent());
                     return true;
@@ -125,21 +135,21 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                 }
 
                 // Setting the effect
-                plugin.getDataManager().setEffect(target.getUniqueId(), args[3], effect);
+                plugin.getDataManager().setEffect(new EffectSlot(target, effect, args[3]));
                 msg = new Message(MessageType.INFUSE_SETEFFECT_SUCCESS);
                 msg.applyPlaceholder("slot", slot);
                 msg.applyPlaceholder("player_name", target.getName());
                 msg.applyPlaceholder("effect_name", effect.getName());
                 player.sendMessage(msg.toComponent());
                 break;
-            case "cleareffect":
+            case "cleareffects":
                 if (!player.isOp()) {
                     player.sendMessage(new Message(MessageType.ERROR_NOT_OP).toComponent());
                     return true;
                 }
 
                 if (args.length != 2) {
-                    player.sendMessage(new Message(MessageType.INFUSE_CLEAREFFECT_USAGE).toComponent());
+                    player.sendMessage(new Message(MessageType.INFUSE_CLEAREFFECTS_USAGE).toComponent());
                     return true;
                 }
 
@@ -153,7 +163,7 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                 // Removing the effects from the player
                 plugin.getDataManager().removeEffect(target.getUniqueId(), "1");
                 plugin.getDataManager().removeEffect(target.getUniqueId(), "2");
-                msg = new Message(MessageType.INFUSE_CLEAREFFECT_SUCCESS);
+                msg = new Message(MessageType.INFUSE_CLEAREFFECTS_SUCCESS);
                 msg.applyPlaceholder("player_name", target.getName());
                 player.sendMessage(msg.toComponent());
                 break;
@@ -215,12 +225,12 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
 
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NonNull CommandSender sender, @NonNull Command command, @NonNull String alias, String[] args) {
         if (args.length == 1) {
             List<String> completions = new ArrayList<>(Arrays.asList("recipes", "controls"));
             
             if (sender.isOp()) {
-                completions.addAll(Arrays.asList("gui", "reload", "giveEffect", "setEffect", "clearEffect", "cooldown"));
+                completions.addAll(Arrays.asList("gui", "reload", "giveEffect", "setEffect", "clearEffects", "cooldown"));
             }
 
             return completions.stream().filter(s -> s.toLowerCase().startsWith(args[0].toLowerCase())).sorted().toList();
@@ -232,19 +242,19 @@ public class InfuseCommand implements CommandExecutor, TabCompleter {
                     return Stream.of("offhand", "command").filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
                 case "giveeffect":
                 case "seteffect":
-                case "cleareffect":
+                case "cleareffects":
                 case "cooldown":
-                    if (!sender.isOp()) return Arrays.asList();
-                    return Bukkit.getOnlinePlayers().stream().map(p -> p.getName()).filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
+                    if (!sender.isOp()) return List.of();
+                    return Bukkit.getOnlinePlayers().stream().map(Player::getName).filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase())).toList();
             }
         }
         
         if (args.length == 3) {
             switch(args[0].toLowerCase()) {
-                case "giveEffect":
-                case "setEffect":
-                    if (!sender.isOp()) return Arrays.asList();
-                    return InfuseEffect.getAllEffects().stream().map(InfuseEffect::getKey).filter(key -> key.startsWith(args[2].toLowerCase())).toList();
+                case "giveeffect":
+                case "seteffect":
+                    if (!sender.isOp()) return List.of();
+                    return InfuseEffect.getRegisteredEffects().values().stream().map(InfuseEffect::toString).filter(key -> key.toLowerCase().startsWith(args[2].toLowerCase())).toList();
             }
         }
         
